[gd_scene load_steps=8 format=2]

[ext_resource path="res://Enemies/Slime.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/Enemies/slime.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/Enemies/slime_walk.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/Enemies/slime_squashed.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "squashed",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 16.2966
height = 16.1862

[sub_resource type="CapsuleShape2D" id=3]
radius = 17.1492
height = 20.702

[node name="Slime" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionBox" type="CollisionShape2D" parent="."]
position = Vector2( 2.12753, 0.773647 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 1.98399, 0 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="GroundCheckLeft" type="RayCast2D" parent="."]
position = Vector2( -24, 0 )
enabled = true
cast_to = Vector2( 0, 23 )

[node name="GroundCheckRight" type="RayCast2D" parent="."]
position = Vector2( 29, 0 )
enabled = true
cast_to = Vector2( 0, 23 )

[node name="WallCheckLeft" type="RayCast2D" parent="."]
position = Vector2( -7.5, 0 )
enabled = true
cast_to = Vector2( -23, 0 )

[node name="WallCheckRight" type="RayCast2D" parent="."]
position = Vector2( 10, 0 )
enabled = true
cast_to = Vector2( 23, 0 )
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
